--- a/packages/zendesk/manifest.json
+++ b/packages/zendesk/manifest.json
@@ -1,9 +1,8 @@
 {
-  "name": "Vite Boilerplate",
+  "name": "ACMOFy",
   "author": {
-    "name": "OlegGulevskyy",
-    "email": "oleggulevskyy@gmail.com",
-    "url": "https://github.com/OlegGulevskyy/zendesk-vite-boilerplate"
+    "name": "Checkout Team",
+    "url": "https://github.com/mercadona/mo.acmofy"
   },
   "defaultLocale": "en",
   "private": true,
