--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   },
   "scripts": {
     "open": "open https://d3v5878-he.zendesk.com/agent/tickets/1?zcli_apps=true",
-    "build": "node scripts/build.mjs prod ticket_sidebar nav_bar",
+    "build": "node scripts/build.mjs prod ticket_sidebar",
     "zcli:package": "zcli apps:package dist",
-    "zcli:start": "node scripts/build.mjs local ticket_sidebar nav_bar && zcli apps:server dist",
-    "ticket_sidebar:start": "node scripts/run.mjs ticket_sidebar",
-    "nav_bar:start": "node scripts/run.mjs nav_bar"
+    "zcli:start": "node scripts/build.mjs local ticket_sidebar && zcli apps:server dist",
+    "ticket_sidebar:start": "node scripts/run.mjs ticket_sidebar"
   },
   "keywords": [],
   "author": "",
