test: Add basic tests support

--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "build": "node scripts/build.mjs prod ticket_sidebar",
     "zcli:package": "zcli apps:package dist",
     "zcli:start": "node scripts/build.mjs local ticket_sidebar && zcli apps:server dist",
-    "ticket_sidebar:start": "node scripts/run.mjs ticket_sidebar"
+    "ticket_sidebar:start": "node scripts/run.mjs ticket_sidebar",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "yarn@3.2.1",
   "devDependencies": {
-    "minimist": "^1.2.6"
+    "minimist": "^1.2.6",
+    "vitest": "^0.31.4"
   }
 }
