--- a/packages/zendesk/manifest.json
+++ b/packages/zendesk/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "ACMOFy",
+  "name": "Acmofy",
   "author": {
     "name": "Checkout Team",
     "email": "sgarcal123456@mercadona.es",
@@ -12,7 +12,7 @@
       "ticket_sidebar": {
         "url": "assets/ticket_sidebar/index.html",
         "size": {
-          "height": "500px",
+          "height": "0px",
           "width": "340px"
         },
         "flexible": true
