--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@vitest/coverage-c8": "^0.31.4",
     "minimist": "^1.2.6",
+    "prettier": "^2.8.8",
     "vitest": "^0.31.4"
   }
 }
