--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "open": "open https://d3v5878-he.zendesk.com/agent/tickets/1?zcli_apps=true",
     "build": "node scripts/build.mjs prod ticket_sidebar",
+    "build:sta": "node scripts/build.mjs sta ticket_sidebar",
     "zcli:package": "zcli apps:package dist",
     "zcli:start": "node scripts/build.mjs local ticket_sidebar && zcli apps:server dist",
     "ticket_sidebar:start": "node scripts/run.mjs ticket_sidebar",
