--- a/packages/zendesk/zcli.apps.config-prod.json
+++ b/packages/zendesk/zcli.apps.config-prod.json
@@ -1,8 +1,8 @@
 {
-  "app_id": 654321,
+  "app_id": 941905,
   "parameters": {
     "MINIMUM_ORDER_ID_LENGTH": 8,
-    "ORDER_ID_CUSTOM_FIELD_ID": 123456789,
-    "URL_ZENDESK_HOOK": "http://zendesk-hook"
+    "ORDER_ID_CUSTOM_FIELD_ID": 360012062392,
+    "URL_ZENDESK_HOOK": "https://zendeskhook.mercadona.es/zendesk-hook"
   }
 }
