--- a/packages/ticket_sidebar/package.json
+++ b/packages/ticket_sidebar/package.json
@@ -10,10 +10,17 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^8.41.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
