--- a/packages/ticket_sidebar/package.json
+++ b/packages/ticket_sidebar/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -17,6 +19,7 @@
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.24",
     "postcss-import": "^15.1.0",
     "postcss-sass": "^0.5.0",
