--- a/packages/zendesk/zcli.apps.config-sta.json
+++ b/packages/zendesk/zcli.apps.config-sta.json
@@ -3,6 +3,6 @@
   "parameters": {
     "MINIMUM_ORDER_ID_LENGTH": 5,
     "ORDER_ID_CUSTOM_FIELD_ID": 360017010219,
-    "URL_ZENDESK_HOOK": "http://34.110.237.158/zendesk-hook"
+    "URL_ZENDESK_HOOK": "http://34.110.237.158/api/acmo/"
   }
 }
