--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "minimist": "^1.2.6",
     "prettier": "^2.8.8",
     "vitest": "^0.31.4"
+  },
+  "dependencies": {
+    "yarn": "^1.22.19"
   }
 }
