--- a/packages/ticket_sidebar/package.json
+++ b/packages/ticket_sidebar/package.json
@@ -37,6 +37,7 @@
     "@zendeskgarden/react-typography": "^8.69.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-use": "^17.4.0",
     "sass": "^1.63.6",
     "styled-components": "^6.0.1"
   }
